@@ -1,3 +1,3 @@
-EBUILD canola-9999.ebuild 1369 RMD160 4124d13973b2b1ea1b2982a679a8953d9c3c7939 SHA1 2f966cd97b5b27cee980924013eaf034ceb53e40 SHA256 5d1f995cc92e6fc4f39a75ac4b815f12ff72c6adf84674ab8a724e832e322e9a
-MISC ChangeLog 265 RMD160 a2ae6cd5fbe0a95c0676b63fb15450891e6e9180 SHA1 ee93eae9d1e9bd99cd2d8cc41d28a0705057138c SHA256 3fd7773a1ddda57d3e1d7f82dd0c9015bc7809c4a388c87b0fcb7eba54967dcc
+EBUILD canola-9999.ebuild 1523 RMD160 44e7575f65be6edddbf63d89f49c101a3bacdd52 SHA1 c252d0273b8f0e916febc8e89c01f7d66e50c3ac SHA256 d7c210aad0ee3e8bf9c1325cb8c664b872443bf0e7b3d8ef5c77753a8c7b3cf2
+MISC ChangeLog 370 RMD160 3d1eb7a4aaab0873c57b44be7d7f222dee33ad84 SHA1 d6c1b0c065ec0c5e19622d41a14816ad378ad21c SHA256 c57f4d2fac9536a355e567f7b55def46d2a5932254c6690ad5da3883c1562a2e
 MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
